# libfactory

./: BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  build_with_spack_cmake.sh  libfactory.pc.in
src/factory/: BigDummy_TEST.cc  BigDummy_TEST.h  DummyFactory_TEST.cc  DummyFactory_TEST.h  Dummy_TEST.cc  Dummy_TEST.h  Factory.h  Factory_TEST.cc  FunctionFactory.h  ObjectFactory.h
src/factory/test/: BigDummyFunc_TEST.cc  BigDummyObject_TEST.cc  BigDummyObject_TEST.h  DummyFunc_TEST.cc  DummyFunc_TEST.h  DummyObject_TEST.cc  DummyObject_TEST.h  FunctionFactory_TEST.cc  ObjectFactory_TEST.cc
